--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -41,12 +41,8 @@ if(USE_CUDA AND CMAKE_CUDA_COMPILER)
 endif()
 
 set(TEST_MODEL_SRC_DIR "${CMAKE_CURRENT_SOURCE_DIR}/test_models/")
-set(TEST_MODEL_DES_DIR "$<TARGET_FILE_DIR:unit_tests>/test_models/")
-add_custom_command(TARGET unit_tests POST_BUILD
-  COMMAND ${CMAKE_COMMAND} -E copy_directory ${TEST_MODEL_SRC_DIR} ${TEST_MODEL_DES_DIR}
-)
 
-add_compile_definitions(MODEL_PATH="${TEST_MODEL_DES_DIR}")
+add_compile_definitions(MODEL_PATH="${TEST_MODEL_SRC_DIR}")
 set_target_properties(unit_tests PROPERTIES FOLDER "Tests")
 source_group(TREE ${PROJECT_SOURCE_DIR} FILES ${test_srcs})
 set_property(DIRECTORY ${CMAKE_SOURCE_DIR} PROPERTY VS_STARTUP_PROJECT unit_tests)
