Move Cuda usage into a shared library similar to onnxruntime (#973)
This separates out the cuda code into a /src/cuda folder and builds
onnxruntime_genai_cuda.dll/.so.
It is only this shared library that depends on the cuda runtimes.
There is an interface inside the core genai code to route functions to
this cuda library, but my next step is to refactor the code to separate
out provider specific, so this interface will shrink.

There is a new type to manage provider specific memory, DeviceMemory<T>
and DeviceMemorySpan<T>, this will replace RoamingArray once the
refactoring is complete.

--- a/src/python/CMakeLists.txt
+++ b/src/python/CMakeLists.txt
@@ -27,8 +27,7 @@ if(USE_CUDA AND CMAKE_CUDA_COMPILER)
   target_link_libraries(python PRIVATE cublas curand cudart)
 endif()
 
-set_target_properties(python PROPERTIES FOLDER "Sources")
-source_group(TREE ${PROJECT_SOURCE_DIR} FILES ${python_srcs})
+source_group(TREE ${CMAKE_CURRENT_SOURCE_DIR} FILES ${python_srcs})
 
 if(BUILD_WHEEL)
   set(WHEEL_FILES_DIR "${CMAKE_BINARY_DIR}/wheel")
