--- a/.pipelines/stages/jobs/macos-ios-cocoapods-packaging-job.yml
+++ b/.pipelines/stages/jobs/macos-ios-cocoapods-packaging-job.yml
@@ -2,13 +2,15 @@ parameters:
 - name: build_config
   type: string
   default: 'release'
+- name: ort_version
+  type: string
 
 jobs:
 - job: macos_ios_cocoapods_packaging
-    pool:
-      vmImage: 'macOS-latest'
-    variables:
-      buildSettingsFile: "tools/ci_build/github/apple/default_full_apple_framework_build_settings.json"
+  pool:
+    vmImage: 'macOS-latest'
+  variables:
+    buildSettingsFile: "tools/ci_build/github/apple/default_full_apple_framework_build_settings.json"
 
   workspace:
     clean: all
@@ -35,3 +37,4 @@ jobs:
             --test \
             --variant Full \
             --build-settings-file "${{ variables.buildSettingsFile }}" \
+            --ort-version ${{parameters.ort_version}}
