--- a/.pipelines/stages/jobs/steps/compliant-and-cleanup-step.yml
+++ b/.pipelines/stages/jobs/steps/compliant-and-cleanup-step.yml
@@ -8,11 +8,10 @@ steps:
 
 - task: TSAUpload@2
   displayName: 'TSA upload'
-  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'))
+  condition: and(succeeded(), eq(variables['Build.SourceBranch'], 'refs/heads/main'), ne(variables['os'], 'osx'), ne(variables['os'], 'ios')) # Not available on macOS.
   inputs:
     GdnPublishTsaOnboard: false
   continueOnError: true
-  condition: and(ne(variables['os'], 'osx'), ne(variables['os'], 'ios'))  # Not available on macOS.
 
 - template: compliant/component-governance-component-detection-step.yml
   parameters:
