--- a/.github/workflows/mac-cpu-arm64-build.yml
+++ b/.github/workflows/mac-cpu-arm64-build.yml
@@ -72,6 +72,7 @@ jobs:
       - name: Run the python tests
         run: |
           source genai-macos-venv/bin/activate
+          export HF_TOKEN="12345"
           export ORTGENAI_LOG_ORT_LIB=1
           python3 test/python/test_onnxruntime_genai.py --cwd test/python --test_models test/test_models
 
