--- a/.github/workflows/linux-gpu-x64-build.yml
+++ b/.github/workflows/linux-gpu-x64-build.yml
@@ -87,6 +87,7 @@ jobs:
 
       - name: Config with Cmake in Docker
         run: |
+          nvidia-smi
           set -e -x
           docker run \
             --gpus all \
