--- a/.pipelines/pypl-publishing.yml
+++ b/.pipelines/pypl-publishing.yml
@@ -37,7 +37,7 @@ parameters:
 - name: enable_linux_rocm
   displayName: 'Whether Linux ROCm package is built.'
   type: boolean
-  default: true
+  default: false
 
 - name: enable_macos_cpu
   displayName: 'Whether MacOS CPU package is built.'
