--- a/.github/workflows/win-directml-x64-build.yml
+++ b/.github/workflows/win-directml-x64-build.yml
@@ -89,7 +89,8 @@ jobs:
     - name: Install the Python Wheel and Test Dependencies
       run: |
         python -m pip install -r test\python\requirements.txt
-        python -m pip install -r test\python\requirements-directml.txt
+        python -m pip install -r test\python\requirements-torch-directml.txt
+        python -m pip install -r test\python\requirements-ort-directml.txt
         python -m pip install (Get-ChildItem ("$env:binaryDir\wheel\*.whl")) --no-deps
 
     - name: Verify Build Artifacts
