--- a/.github/workflows/win-cpu-x64-build.yml
+++ b/.github/workflows/win-cpu-x64-build.yml
@@ -75,8 +75,8 @@ jobs:
     - name: Install the python wheel and test dependencies
       run: |
         python3 -m pip install -r test\python\requirements.txt --user
-        python3 -m pip install -r test\python\requirements-torch-cpu.txt --user
-        python3 -m pip install -r test\python\requirements-ort-cpu.txt --user
+        python3 -m pip install -r test\python\cpu\torch\requirements.txt --user
+        python3 -m pip install -r test\python\cpu\ort\requirements.txt --user
         python3 -m pip install (Get-ChildItem ("$env:binaryDir\wheel\*.whl")) --no-deps
 
     - name: Use Dummy HuggingFace Token
