--- a/.pipelines/stages/jobs/macos-ios-cocoapods-packaging-job.yml
+++ b/.pipelines/stages/jobs/macos-ios-cocoapods-packaging-job.yml
@@ -37,4 +37,5 @@ jobs:
             --test \
             --variant Full \
             --build-settings-file "${{ variables.buildSettingsFile }}" \
+            --build-apple-framework-args==--config=$(cmake_build_type) \
             --ort-version ${{parameters.ort_version}}
