Fix release pipeline issues for the next release (#1017)
Preparing for 0.5.0 release:

* Drop Python 3.8 & 3.9 support
* Add Python 3.13 support.
* Remove `ort-nightly` across pipelines.

---

NuGet validation run:
*
https://aiinfra.visualstudio.com/ONNX%20Runtime/_build/results?buildId=592239&view=results

Python validation run:
*
https://aiinfra.visualstudio.com/ONNX%20Runtime/_build/results?buildId=591237&view=results

--- a/test/python/directml/ort/requirements.txt
+++ b/test/python/directml/ort/requirements.txt
@@ -1,2 +1,2 @@
 -i https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/ORT-Nightly/pypi/simple/
-ort-nightly-directml==1.20.0.dev20241006001
+onnxruntime-directml==1.20.0.dev20241016004
