--- a/test/python/cuda/ort/requirements.txt
+++ b/test/python/cuda/ort/requirements.txt
@@ -1,2 +1,2 @@
 -i https://aiinfra.pkgs.visualstudio.com/PublicPackages/_packaging/ORT-Nightly/pypi/simple/
-ort-nightly-gpu==1.20.0.dev20241007001
+onnxruntime-gpu==1.20.0.dev20241016001
