--- a/.pipelines/stages/jobs/steps/utils/download-huggingface-model.yml
+++ b/.pipelines/stages/jobs/steps/utils/download-huggingface-model.yml
@@ -28,7 +28,8 @@ steps:
     - powershell: |
         python -m pip install "huggingface_hub[cli]"
         huggingface-cli login --token $env:HF_TOKEN
-        huggingface-cli download ${{ parameters.HuggingFaceRepo }} --include ${{ parameters.RepoFolder }}/* --local-dir ${{ parameters.LocalFolder }} --local-dir-use-symlinks False
+        # Use maximum path length for Windows... otherwises hits the path character limit
+        huggingface-cli download ${{ parameters.HuggingFaceRepo }} --include ${{ parameters.RepoFolder }}/* --local-dir "\\?\${{ parameters.WorkingDirectory }}\\${{ parameters.LocalFolder }}" --local-dir-use-symlinks False
       displayName: ${{ parameters.StepName }}
       workingDirectory: ${{ parameters.WorkingDirectory }}
       env:
