--- a/.github/workflows/linux-cpu-x64-build.yml
+++ b/.github/workflows/linux-cpu-x64-build.yml
@@ -27,6 +27,9 @@ jobs:
         with:
           dotnet-version: '8.0.x'
 
+      - name: Install Rust
+        uses: dtolnay/rust-toolchain@stable
+
       - name: Get the Latest OnnxRuntime Nightly Version
         shell: pwsh
         run: |
