test win cpu build action

--- a/.github/workflows/win-cpu-x64-build.yml
+++ b/.github/workflows/win-cpu-x64-build.yml
@@ -41,6 +41,9 @@ jobs:
       with:
         dotnet-version: '8.0.x'
 
+    - name: Install Rust
+      uses: dtolnay/rust-toolchain@stable
+
     - name: Download OnnxRuntime Nightly
       shell: pwsh
       run: |
