--- a/.github/workflows/win-cpu-x64-build.yml
+++ b/.github/workflows/win-cpu-x64-build.yml
@@ -42,7 +42,14 @@ jobs:
         dotnet-version: '8.0.x'
 
     - name: Install Rust
-      uses: dtolnay/rust-toolchain@stable
+      run: |
+        $exePath = "$env:TEMP\rustup-init.exe"
+        (New-Object Net.WebClient).DownloadFile('https://static.rust-lang.org/rustup/dist/x86_64-pc-windows-msvc/rustup-init.exe', $exePath)
+        cmd /c start /wait $exePath -y
+        Remove-Item $exePath
+        cargo --version
+        rustup --version
+        rustc --version
 
     - name: Download OnnxRuntime Nightly
       shell: pwsh
