--- a/.github/workflows/win-cpu-x64-build.yml
+++ b/.github/workflows/win-cpu-x64-build.yml
@@ -47,7 +47,7 @@ jobs:
         (New-Object Net.WebClient).DownloadFile('https://static.rust-lang.org/rustup/dist/x86_64-pc-windows-msvc/rustup-init.exe', $exePath)
         & $exePath -y
         Remove-Item $exePath
-        $env:Path = %USERPROFILE%\.cargo\bin; + $env:Path 
+        $env:Path = $env:USERPROFILE\.cargo\bin; + $env:Path 
 
     - name: Download OnnxRuntime Nightly
       shell: pwsh
