--- a/.github/workflows/win-cpu-x64-build.yml
+++ b/.github/workflows/win-cpu-x64-build.yml
@@ -41,6 +41,18 @@ jobs:
       with:
         dotnet-version: '8.0.x'
 
+    - name: Setup Java 17
+      uses: actions/setup-java@v4
+      with:
+        java-version: '17'
+        distribution: 'temurin'
+        cache: 'gradle'
+
+    - name: Setup Gradle
+      uses: gradle/actions/setup-gradle@v3
+      with:
+        gradle-version: '8.6'
+
     - name: Download OnnxRuntime Nightly
       shell: pwsh
       run: |
@@ -91,6 +103,11 @@ jobs:
       run: |
         cd test\csharp
         dotnet test /p:NativeBuildOutputDir="$env:GITHUB_WORKSPACE\$env:binaryDir\Release" /p:OrtLibDir="$env:GITHUB_WORKSPACE\ort\lib"
+
+    - name: Build the Java API and Run the Java Tests
+      run: |
+        set -e -x
+        python3 build.py --config=Release --build_dir build/cpu --build_java --parallel --cmake_generator "Ninja"
 
     - name: Verify Build Artifacts
       if: always()
