--- a/.github/workflows/linux-gpu-x64-build.yml
+++ b/.github/workflows/linux-gpu-x64-build.yml
@@ -95,7 +95,7 @@ jobs:
             --gpus all \
             --rm \
             --volume $GITHUB_WORKSPACE:/ort_genai_src \
-            --volume $$CARGO_HOME:/root/.cargo \
+            --volume $CARGO_HOME:/root/.cargo \
             -w /ort_genai_src onnxruntimecudabuildx64 \
             bash -c " \
               export PATH=/root/.cargo/bin:$PATH && \
@@ -110,7 +110,7 @@ jobs:
             --gpus all \
             --rm \
             --volume $GITHUB_WORKSPACE:/ort_genai_src \
-            --volume $$CARGO_HOME:/root/.cargo \
+            --volume $CARGO_HOME:/root/.cargo \
             -w /ort_genai_src onnxruntimecudabuildx64 \
             bash -c " \
               export PATH=/root/.cargo/bin:$PATH && \
