--- a/.github/workflows/linux-gpu-x64-build.yml
+++ b/.github/workflows/linux-gpu-x64-build.yml
@@ -95,12 +95,12 @@ jobs:
             --gpus all \
             --rm \
             --volume $GITHUB_WORKSPACE:/ort_genai_src \
-            --volume $CARGO_HOME:/.cargo \
             -w /ort_genai_src onnxruntimecudabuildx64 \
             bash -c " \
               export CARGO_HOME=/.cargo && \
               curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf | sh -s -- -y && \
               /usr/bin/cmake --preset linux_gcc_cuda_release \
+                -DRust_COMPILER=/.cargo/bin/rustc \
                 -DMANYLINUX=ON \
                 -DPYTHON_EXECUTABLE=${{ env.PYTHON_EXECUTABLE }} "
 
@@ -115,7 +115,9 @@ jobs:
             -w /ort_genai_src onnxruntimecudabuildx64 \
             bash -c " \
               export PATH=/root/.cargo/bin:$PATH && \
-              /usr/bin/cmake --build --preset linux_gcc_cuda_release"
+              curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf | sh -s -- -y && \
+              /usr/bin/cmake --build --preset linux_gcc_cuda_release \
+                -DRust_COMPILER=/.cargo/bin/rustc "
 
       - name: Use Dummy HuggingFace Token
         run: |
