--- a/.github/workflows/linux-gpu-x64-build.yml
+++ b/.github/workflows/linux-gpu-x64-build.yml
@@ -97,10 +97,10 @@ jobs:
             --volume $GITHUB_WORKSPACE:/ort_genai_src \
             -w /ort_genai_src onnxruntimecudabuildx64 \
             bash -c " \
-              export CARGO_HOME=/.cargo && \
+              export CARGO_HOME=/ort_genai_src/.cargo && \
               curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf | sh -s -- -y && \
               /usr/bin/cmake --preset linux_gcc_cuda_release \
-                -DRust_COMPILER=/.cargo/bin/rustc \
+                -DRust_COMPILER=/ort_genai_src/.cargo/bin/rustc \
                 -DMANYLINUX=ON \
                 -DPYTHON_EXECUTABLE=${{ env.PYTHON_EXECUTABLE }} "
 
@@ -111,13 +111,11 @@ jobs:
             --gpus all \
             --rm \
             --volume $GITHUB_WORKSPACE:/ort_genai_src \
-            --volume $CARGO_HOME:/root/.cargo \
             -w /ort_genai_src onnxruntimecudabuildx64 \
             bash -c " \
-              export PATH=/root/.cargo/bin:$PATH && \
-              curl --proto '=https' --tlsv1.2 https://sh.rustup.rs -sSf | sh -s -- -y && \
+              export CARGO_HOME=/ort_genai_src/.cargo && \
               /usr/bin/cmake --build --preset linux_gcc_cuda_release \
-                -DRust_COMPILER=/.cargo/bin/rustc "
+                -DRust_COMPILER=/ort_genai_src/.cargo/bin/rustc "
 
       - name: Use Dummy HuggingFace Token
         run: |
